删掉一些不可用的东西
Signed-off-by: 万念断绝 <puzuoih9856@163.com>

--- a/config/help.yaml
+++ b/config/help.yaml
@@ -39,8 +39,8 @@
       title: "#1-1H"
       desc: 查看1-1hard的关卡攻略
     - icon: qqq
-      title: "#60秒看世界"
-      desc: 看新闻
+      title: "无"
+      desc: 无
     - icon: chahui
       title: "无"
       desc: 无
