--- a/config/help.yaml
+++ b/config/help.yaml
@@ -37,8 +37,8 @@
       title: "#1-1H"
       desc: 查看1-1hard的关卡攻略
     - icon: qqq
-      title: "无"
-      desc: 无
+      title: "BA，启动"
+      desc: 嘿嘿嘿
     - icon: chahui
       title: "无"
       desc: 无
