--- a/config/help.yaml
+++ b/config/help.yaml
@@ -44,7 +44,7 @@
       desc: 看看wiki上的活动日历
     - icon: xialai
       title: "#学生列表"
-      desc: 查看目前实装的学生（不全，还在弄）
+      desc: 查看目前实装的学生
     - icon: teyixianxiang
       title: "无"
       desc: 无
