--- a/config/help.yaml
+++ b/config/help.yaml
@@ -49,7 +49,7 @@
       title: "#npc列表"
       desc: 查看NPC
     - icon: xinnai
-      title: "#wiki日奈"
+      title: "#wk日奈"
       desc: 查看wiki上的攻略
     - icon: yantaohui
       title: "无"
