--- a/config/help.yaml
+++ b/config/help.yaml
@@ -52,8 +52,8 @@
       title: "#wk日奈"
       desc: 查看wiki上的攻略
     - icon: yantaohui
-      title: "无"
-      desc: 无
+      title: "#往期活动"
+      desc: 查看日服往期活动
     - icon: wanmo
       title: "无"
       desc: 无
