添加光环一览

--- a/config/help.yaml
+++ b/config/help.yaml
@@ -55,8 +55,8 @@
       title: "#往期活动"
       desc: 查看日服往期活动
     - icon: wanmo
-      title: "无"
-      desc: 无
+      title: "#光环一览"
+      desc: 查看所有的光环
     - icon: yilvbo
       title: "无"
       desc: 无
