增加学生社团分布功能

--- a/config/help.yaml
+++ b/config/help.yaml
@@ -58,7 +58,7 @@
       title: "#光环一览"
       desc: 查看所有的光环
     - icon: yilvbo
-      title: "无"
+      title: "#学生社团分布图"
       desc: 无
     - icon: fengji
       title: "无"
