优化未来视正则

--- a/config/help.yaml
+++ b/config/help.yaml
@@ -61,7 +61,7 @@
       title: "#学生社团分布图"
       desc: 这就不用描述了吧
     - icon: fengji
-      title: "未来视"
+      title: "#未来视"
       desc: 国际服未来视
 - group: 其他功能
   list:
