氵个总力战

--- a/config/help.yaml
+++ b/config/help.yaml
@@ -28,8 +28,8 @@
       title: "#教官"
       desc: 查看瞬的角评
     - icon: srt
-      title: "#水宫子"
-      desc: 查看泳装宫子的角评
+      title: "#总力战帮助"
+      desc: 有关总力战的说明
     - icon: qipao
       title: "#1-1"
       desc: 查看1-1的关卡攻略
