更新学生列表
Signed-off-by: 万念断绝 <3410586885@qq.com>

--- a/config/student_list.yaml
+++ b/config/student_list.yaml
@@ -316,3 +316,9 @@
       title: "美游（泳装）"
     - icon: 初音未来（联动）
       title: "初音未来（联动）"
+    - icon: 御坂美琴
+      title: "御坂美琴"
+    - icon: 食蜂操祈
+      title: "食蜂操祈"
+    - icon: 佐天泪子
+      title: "佐天泪子"
