更新学生列表
Signed-off-by: 万念断绝 <3410586885@qq.com>

--- a/config/student_list.yaml
+++ b/config/student_list.yaml
@@ -238,6 +238,8 @@
       title: "千世"
     - icon: 千世（泳装）
       title: "千世（泳装）"
+    - icon: 缘里
+      title: "缘里"
     - icon: 满
       title: "满"
     - icon: 月咏
