更新学生列表
Signed-off-by: 万念断绝 <3410586885@qq.com>

--- a/config/student_list.yaml
+++ b/config/student_list.yaml
@@ -240,6 +240,10 @@
       title: "千世（泳装）"
     - icon: 缘里
       title: "缘里"
+    - icon: 莲华
+      title: "莲华"
+    - icon: 桔梗
+      title: "桔梗"
     - icon: 满
       title: "满"
     - icon: 月咏
