新增网页获取角评，待更新别名文件才能正常使用

--- a/resources/role.yaml
+++ b/resources/role.yaml
@@ -1,21 +1,29 @@
 #角色别名
-#待补充
+#待补充 第一个名字勿改
 10000:
   - 小鸟游星野
   - 星野
+  - ホシノ
+  - Hoshino
 10001:
   - 砂狼白子
   - 白子
+  - シロコ
+  - Shiroko
 10002:
+  - 黑见茜香
   - 黑见芹香
   - 芹香
 10003:
   - 奥空绫音
   - 绫音
 10004:
+  - 鬼方佳世子
   - 鬼方佳代子
   - 佳代子
+  - 佳世子
 10005:
+  - 陆八魔亚瑠
   - 陆八魔爱露
   - 爱露
   - 阿露
@@ -26,9 +34,11 @@
   - 银镜伊织
   - 伊织
 10008:
+  - 空崎阳奈
   - 空崎日奈
   - 日奈
 10009:
+  - 赤司淳子
   - 赤司纯子
   - 纯子
   - 淳子
@@ -36,38 +46,48 @@
   - 狮子堂泉
   - 泉
 10011:
+  - 鳄渕亚伽里
   - 鳄渊明里
   - 明里
 10012:
+  - 黒馆羽留奈
   - 黑馆晴奈
   - 晴奈
 10013:
+  - 爱清风华
   - 爱清风香
   - 风香
   - 枫香
 10014:
+  - 阿慈谷日步美
   - 阿慈谷日富美
   - 日富美
 10015:
+  - 伊原木喜美
   - 伊原木好美
   - 好美
 10016:
+  - 栗村爱莉
   - 栗村爱理
   - 爱理
   - 爱莉
 10017:
+  - 鹫见芹奈
   - 鹫见芹娜
   - 芹娜
 10018:
+  - 羽川莲实
   - 羽川莲见
   - 莲见
 10019:
+  - 剑先弦生
   - 剑先鹤城
   - 鹤城
 10020:
   - 一之濑明日奈
   - 明日奈
 10021:
+  - 室笠朱音
   - 室笠茜
   - 茜
   - 朱音
@@ -75,6 +95,7 @@
   - 角楯花凛
   - 花凛
 10023:
+  - 美甘宁瑠
   - 美甘妮露
   - 妮露
   - 尼禄
@@ -85,10 +106,12 @@
   - 小涂真纪
   - 真纪
 10026:
+  - 豊见亚都梨
   - 丰见琴里
   - 琴里
   - 柯托莉
 10027:
+  - 白石咏叶
   - 白石歌原
   - 歌原
 10028:
@@ -100,8 +123,10 @@
   - 邮箱
   - 📫
 10030:
+  - 乙花菫
   - 乙花堇
   - 堇
+#标记
 10031:
   - 朝比奈菲娜
   - 菲娜
@@ -465,6 +490,7 @@
   - 苍森美祢
   - 美祢
 10126:
+  - 圣园弥香
   - 圣园未花
   - 未花
 10127:
