--- a/resources/role.yaml
+++ b/resources/role.yaml
@@ -134,35 +134,45 @@
   - 春日椿
   - 椿
 10033:
+  - 和乐知世
   - 和乐千世
   - 千世
 10034:
+  - 药子沙耶
   - 药子纱绫
   - 纱绫
 10035:
+  - 春原旬
   - 春原瞬
   - 瞬
 10036:
+  - 十六夜野乃美
   - 十六夜野宫
   - 野宫
 10037:
+  - 和泉元英美
   - 和泉元艾米
   - 艾米
 10038:
+  - 朝颜花绘
   - 朝颜花江
   - 花江
   - 花绘
 10039:
+  - 浅黄无月
   - 浅黄睦月
   - 睦月
 10040:
+  - 伊草遥香
   - 伊草春香
   - 春香
   - 遥香
 10041:
+  - 牛牧茱莉
   - 牛牧朱莉
   - 朱莉
 10042:
+  - 円堂志美子
   - 圆堂志美子
   - 志美子
 10043:
@@ -175,6 +185,7 @@
   - 静山真白
   - 真白
 10046:
+  - 久田伊树菜
   - 久田泉奈
   - 泉奈
 10047:
@@ -190,6 +201,7 @@
   - 才羽绿
   - 绿
 10051:
+  - 连河洁莉诺
   - 连河切里诺
   - 切里诺
 10052:
@@ -280,6 +292,7 @@
   - 柚鸟夏
   - 夏
 10072:
+  - 伊落玛莉
   - 伊落玛丽
   - 玛丽
 10073:
@@ -297,6 +310,7 @@
   - 千夏（温泉）
   - 温泉千夏
 10077:
+  - 佐藤智惠
   - 佐城巴
   - 巴
 10078:
@@ -319,12 +333,14 @@
   - 芹香（正月）
   - 正月芹香
 10082:
+  - 合歓垣吹雪
   - 合欢垣吹雪
   - 吹雪
 10083:
   - 狐坂若藻
   - 若藻
 10084:
+  - 冰室濑奈
   - 冰室濑名
   - 濑名
 10085:
@@ -343,12 +359,15 @@
   - 池仓玛丽娜
   - 玛丽娜
 10090:
+  - 空井咲希
   - 空井咲
   - 咲
 10091:
+  - 月雪都子
   - 月雪宫子
   - 宫子
 10092:
+  - 霞沢美优
   - 霞泽美游
   - 美游
 10093:
@@ -358,9 +377,11 @@
   - 枣伊吕波
   - 伊吕波
 10095:
+  - 千鸟三千留
   - 千鸟满
   - 满
 10096:
+  - 大野月夜
   - 大野月咏
   - 月咏
 10097:
@@ -370,6 +391,7 @@
   - 槌永日和
   - 日和
 10099:
+  - 秤敦子
   - 秤亚津子
   - 津子
 10100:
@@ -411,12 +433,15 @@
   - 锭前纱织
   - 纱织
 10108:
+  - 风仓萌
   - 风仓萌绘
   - 萌绘
 10109:
+  - 杏山千纱
   - 杏山和纱
   - 和纱
 10110:
+  - 春原心菜
   - 春原心奈
   - 心奈
 10111:
@@ -425,6 +450,7 @@
   - 应援团歌原
   - 应援歌原
 10112:
+  - 生塩乃爱
   - 生盐诺亚
   - 诺亚
 10113:
@@ -452,6 +478,7 @@
   - 莲见（体操服）
   - 体操服莲见
 10118:
+  - 明星阳葵
   - 明星日鞠
   - 日鞠
 10119:
@@ -497,6 +524,7 @@
   - 下仓惠
   - 惠
 10128:
+  - 尾刃环奈
   - 尾刃叶渚
   - 康娜
 10129:
@@ -523,6 +551,7 @@
   - 遥香（正月）
   - 正月遥香
 10135:
+  - 桑上佳穗
   - 桑上果穗
   - 果穗
 10136:
@@ -540,9 +569,11 @@
   - 女仆装爱丽丝
   - 女仆爱丽丝
 10139:
+  - 宇泽澪纱
   - 宇泽玲纱
   - 玲纱
 10140:
+  - 朱城瑠美
   - 朱城留美
   - 留美
   - 瑠美
@@ -550,6 +581,7 @@
   - 近卫南
   - 南
 10142:
+  - 安守实里
   - 实梨
 10143:
   - 宫子(泳装)
@@ -597,8 +629,10 @@
   - 泳装三森
   - 水三森
 10152:
+  - 姫木梅露
   - 梅露
 10153:
+  - 秋泉红叶
   - 红叶
 10154:
   - 琴里(应援团)
@@ -614,8 +648,10 @@
   - 晴奈（体操服）
   - 体操服晴奈
 10156:
+  - 鬼怒川佳澄
   - 霞 
 10157:
+  - 仲正一花
   - 一花
 10158:
   - 时雨(温泉)
@@ -633,10 +669,13 @@
   - 佐天泪子
   - 泪子
 10162:
+  - 勘解由小路由香里
   - 缘里
 10163:
+  - 不破莲华
   - 莲华
 10164:
+  - 桐生桔梗
   - 桔梗
 10165:
   - 艾米(泳装)
