--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 README.md
+node_modules/
+config/
+resources/video/
+resources/student_information/
+resources/关卡攻略/
+resources/测试用(data).json
+resources/测试用(map).json
