--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BlueArchive-plugin",
+  "name": "blue-archive-plugin",
   "version": "0.0.1",
   "author": " 万念断绝",
   "description": "蔚蓝档案",
