--- a/defSet/role.yaml
+++ b/defSet/role.yaml
@@ -126,7 +126,6 @@
   - 乙花菫
   - 乙花堇
   - 堇
-#标记
 10031:
   - 朝比奈菲娜
   - 菲娜
@@ -240,6 +239,8 @@
   - 泳装日富美
   - 水日富美
 10061:
+  - 空崎阳奈(泳装)
+  - 空崎阳奈（泳装）
   - 日奈(泳装)
   - 日奈（泳装）
   - 泳装日奈
@@ -250,6 +251,8 @@
   - 泳装伊织
   - 水伊织
 10063:
+  - 狮子堂泉(泳装)
+  - 狮子堂泉（泳装）
   - 泉(泳装)
   - 泉（泳装）
   - 泳装泉
@@ -264,6 +267,8 @@
   - 中务桐乃
   - 桐乃
 10066:
+  - 春原旬(幼女)
+  - 春原旬（幼女）
   - 瞬(幼女)
   - 瞬（幼女）
   - 幼女瞬
@@ -454,6 +459,8 @@
   - 生盐诺亚
   - 诺亚
 10113:
+  - 猫冢响(应援团)
+  - 猫冢响（应援团）
   - 响(应援团)
   - 响（应援团）
   - 应援团响
@@ -596,6 +603,8 @@
   - 泳装宫子
   - 水宫子
 10144:
+  - 空井咲希(泳装)
+  - 空井咲希（泳装）
   - 咲(泳装)
   - 咲（泳装）
   - 泳装咲
@@ -621,6 +630,8 @@
   - 泳装小春
   - 水小春
 10149:
+  - 古关忧(泳装)
+  - 古关忧（泳装）
   - 忧(泳装)
   - 忧（泳装）
   - 泳装忧
