补充角色类型以及别名

--- a/defSet/role.yaml
+++ b/defSet/role.yaml
@@ -329,14 +329,17 @@
   - 爱露(正月)
   - 爱露（正月）
   - 正月爱露
+  - 新年爱露
 10080:
   - 睦月(正月)
   - 睦月（正月）
   - 正月睦月
+  - 新年睦月
 10081:
   - 芹香(正月)
   - 芹香（正月）
   - 正月芹香
+  - 新年芹香
 10082:
   - 合歓垣吹雪
   - 合欢垣吹雪
@@ -506,6 +509,7 @@
   - 晴奈(正月)
   - 晴奈（正月）
   - 正月晴奈
+  - 新年晴奈
 10123:
   - 淳子(正月)
   - 淳子（正月）
@@ -513,13 +517,16 @@
   - 纯子(正月)
   - 纯子（正月）
   - 正月纯子
+  - 新年纯子
 10124:
   - 枫香(正月)
   - 枫香（正月）
   - 正月枫香
+  - 新年枫香
   - 风香(正月)
   - 风香（正月）
   - 正月风香
+  - 新年风香
 10125:
   - 苍森美祢
   - 美祢
@@ -550,16 +557,20 @@
   - 佳世子(正月)
   - 佳世子（正月）
   - 正月佳世子
+  - 新年佳世子
   - 佳代子(正月)
   - 佳代子（正月）
   - 正月佳代子
+  - 新年佳代子
 10134:
   - 遥香(正月)
   - 遥香（正月）
   - 正月遥香
+  - 新年遥香
   - 春香(正月)
   - 春香（正月）
   - 正月春香
+  - 新年春香
 10135:
   - 桑上佳穗
   - 桑上果穗
@@ -667,7 +678,9 @@
   - 体操服晴奈
 10156:
   - 鬼怒川佳澄
-  - 霞 
+  - 霞
+  - カスミ
+  - Kasumi
 10157:
   - 仲正一花
   - 一花
@@ -701,3 +714,29 @@
   - 艾米（泳装）
   - 泳装艾米
   - 水艾米
+100166:
+  - 天雨亚子(礼服)
+  - 天雨亚子（礼服）
+  - 亚子(礼服)
+  - 亚子（礼服）
+  - 礼服亚子
+  - 礼服アコ
+  - 礼服Ako
+100167:
+  - 羽沼真琴
+  - 真琴
+  - マコト
+  - Makoto
+100168:
+  - 空崎日奈(礼服)
+  - 空崎日奈（礼服）
+  - 空崎阳奈(礼服)
+  - 空崎阳奈（礼服）
+  - 礼服日奈
+  - 礼服ヒナ
+  - 礼服Hina
+100169:
+  - 丹花伊吹
+  - 伊吹
+  - イブキ
+  - Ibuki
