新增随机语音、bgm、查看档线，使用#ba版本查看详情，新增一个依赖记得安装

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 node_modules/
 config/
 resources/video/
+resources/audio/
 resources/student_information/
 resources/关卡攻略/
 resources/Tepm/
+resources/资源/
+resources/extraResources/
 apps/ba测试.js
+model/0/
