--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "蔚蓝档案",
   "type": "module",
   "dependencies": {
-    "cheerio": "1.0.0-rc.12"
+    "cheerio": "1.0.0-rc.12",
+    "qrcode": "^1.5.3"
   }
 }
