调整活动模板，猜角色添加自定义配置

--- a/defSet/set.yaml
+++ b/defSet/set.yaml
@@ -27,3 +27,20 @@ actPushList:
 
 # ba活动更新推送 国服、国际服、日服，为空字符串则是全部
 actPushServer: ''
+
+# 猜角色 框选区域比例
+guessCharacters: 
+  ############################# 立绘图片 ###########################################
+  # 矩形图片   默认图片高度(或宽度，选择较小一边)的10% ~ 18% （0.1, 0.18）
+  rectangle: 
+    max: 0.1
+    min: 0.18
+  # 接近正方形（高宽比大于70%）的图片   默认图片高度(或宽度，选择较小一边)的5% ~ 10% （0.05, 0.1）
+  square: 
+    max: 0.05
+    min: 0.1
+
+  ############################ 大头照和记忆大厅 #####################################
+  # 默认宽度的20%
+  size: 0.2
+  
